--- a/angular.json
+++ b/angular.json
@@ -46,9 +46,12 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/moment/min/moment-with-locales.min.js"
+            ]
           },
           "configurations": {
             "production": {
