Added Navbar (TODO : COMPONENT)

--- a/angular.json
+++ b/angular.json
@@ -50,7 +50,9 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": [
-              "node_modules/moment/min/moment-with-locales.min.js"
+              "node_modules/moment/min/moment-with-locales.min.js",
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
           },
           "configurations": {
